@@ -21,6 +21,7 @@ Current:
       ATxmega32A4U, ATxmega32C4, ATxmega384C3, ATxmega384D3,
       ATxmega64A1U, ATxmega64A3U, ATxmega64A4U, ATxmega64B1,
       ATxmega64B3, ATxmega64C3, ATxmega64D3
+    - ATtiny43U
 
 
   * New programmers supported:
@@ -106,6 +107,7 @@ Current:
       - bug #34277: avrdude reads wrong byte order if using avr911 (aka butterfly)
       - bug #35456: The progress bar for STK500V2 programmer is "wrong".
       - patch #5708 avrdude should make 10 synchronization attempts instead of just one
+      - patch #7606 ATtiny43u support
 
   * Keep track of input file contents
 
